Add logic to create a student while creating a new user if the selected role is student so that we do have a connection between students and their system users.